/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package mesosproto;

import "mesos.proto";


message AuthenticateMessage {
  required string pid = 1; // PID that needs to be authenticated.
}


message AuthenticationMechanismsMessage {
  repeated string mechanisms = 1; // List of available SASL mechanisms.
}


message AuthenticationStartMessage {
  required string mechanism = 1;
  optional bytes data = 2;
}


message AuthenticationStepMessage {
  required bytes data = 1;
}


message AuthenticationCompletedMessage {}


message AuthenticationFailedMessage {}


message AuthenticationErrorMessage {
  optional string error = 1;
}
